--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -976,7 +976,7 @@ section {
 
 .contact .php-email-form input,
 .contact .php-email-form textarea {
-  border-radius: 8;
+  border-radius: 8px;
   box-shadow: none;
   font-size: 14px;
 }
